metadata/force-app/main/default/objects/ccrz__E_ContactAddr__c/fields/ccrz__DaytimePhone__c.field-meta.xml
<CustomField>
    <fullName>ccrz__DaytimePhone__c</fullName>
    <description>Main phone number for the address.</description>
    <label>Daytime Phone</label>
    <type>Phone</type>
</CustomField>