metadata/force-app/main/default/objects/ccrz__E_ContactAddr__c/fields/ccrz__ShippingComments__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ShippingComments__c</fullName>
    <description>If the user enters any shipping comments during checkout those comments will be in this field on the shipping address associated with the order.</description>
    <label>Shipping Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>